2013-12-28  Murray Stokely  <mstokely@google.com>

	* src/extractors.cpp (rprotobuf): Correct handling of uint32 for
	  single values greater than 2^31 by returning as R numeric types
	  to avoid losing precision since R doesn't have unsigned int
	  types but C++ does. Works around an Rcpp bug
	  https://r-forge.r-project.org/tracker/index.php?func=detail&aid=1360&group_id=155&atid=637

2013-12-27  Murray Stokely  <mstokely@google.com>

	* src/mutators.cpp: Refactor setMessageField into four separate
	  functions, correct a few minor typos, and wrap everything in a
	  try/catch block so we catch any exceptions generated by Rcpp::as
	  or other functions and forward it along to an R-language stop()
	  error instead of terminating our R instance.
	* src/mutators.cpp (rprotobuf): Add more helpful error message
	  specifying which element of a list is of the wrong type, and what
	  the expected type is, when setting a list of messages.
	* inst/unitTests/runit.messages.R (test.message): Add unit tests
	  for our handling of setting repeated message fields.
	* src/wrapper_Message.cpp: Add const qualifier to
	  field_desc throughout file.
	* src/exceptions.cpp: Remove ancient exceptions handling code,
	  migrate codebase to use standard exception classes and helper
	  functions from Rcpp.
	* R/exceptions.R (throw): idem.

2013-12-26  Murray Stokely  <mstokely@google.com>

	* src/mutators.cpp: Support setting int32 values with character
	  vectors of a decimal number, as we do by necessity for int64s.
	  Also, refuse to set non-repeated bools to NA, just as we do for
	  repeated bool fields by raising a stop() error since protocol
	  buffer bools are 2-valued and NA is the third-value of R bools.
	* inst/unitTests/runit.int32.R (test.int32): Add tests for above.
	* NAMESPACE: Add missing export for .DollarNames
	  EnumValueDescriptor to allow completion on that class.
	* R/00classes.R: Update FileDescriptor '$' dispatch to work